add second block

--- a/index.html
+++ b/index.html
@@ -23,10 +23,40 @@
 			<div class="title-container">
 				<h1>Дмитрий Алексеев</h1>
 				<h3>Frontend-разработчик и веб-верстальщик</h3>
-				<button>Узнать больше</button>
+				<button class="more__btn">Узнать больше</button>
 			</div>
 		</div>
 	</header>
+	<div class="services">
+		<h2 class="services__headline">
+			Что я делаю
+		</h2>
+		<ul class="services__list">
+			<li>
+				<img src="./img/icons/tools-and-utensils.png" alt="" class="services__img">
+				<div class="services__tittle">Вёрстка лендинг–страниц
+и сайтов любой сложности</div>
+			</li>
+			<li>
+				<img src="./img/icons/responsive.png" alt="" class="services__img">
+				<div class="services__tittle">Адаптивная вёрстка под все
+браузеры и устройства</div>
+			</li>
+			<li>
+				<img src="./img/icons/programming.png" alt="" class="services__img">
+				<div class="services__tittle">Frontend–разработка
+и программирование</div>
+			</li>
+			<li>
+				<img src="./img/icons/coding.png" alt="" class="services__img">
+				<div class="services__tittle">Исправление и доработка
+существующей вёрстки</div>
+			</li>
+		</ul>
+		<button class="more__btn">
+			Узнаnь стоимость			
+		</button>	
+	</div>
 
 
 
