change some elem

--- a/index.html
+++ b/index.html
@@ -28,29 +28,25 @@
 		</div>
 	</header>
 	<div class="services">
-		<h2 class="services__headline">
+		<h2 class="headline">
 			Что я делаю
 		</h2>
 		<ul class="services__list">
 			<li>
 				<img src="./img/icons/tools-and-utensils.png" alt="" class="services__img">
-				<div class="services__tittle">Вёрстка лендинг–страниц
-и сайтов любой сложности</div>
+				<div class="services__tittle">Вёрстка лендинг–страниц <br> и сайтов любой сложности</div>
 			</li>
 			<li>
 				<img src="./img/icons/responsive.png" alt="" class="services__img">
-				<div class="services__tittle">Адаптивная вёрстка под все
-браузеры и устройства</div>
+				<div class="services__tittle">Адаптивная вёрстка под все <br>браузеры и устройства</div>
 			</li>
 			<li>
 				<img src="./img/icons/programming.png" alt="" class="services__img">
-				<div class="services__tittle">Frontend–разработка
-и программирование</div>
+				<div class="services__tittle">Frontend–разработка <br>и программирование</div>
 			</li>
 			<li>
 				<img src="./img/icons/coding.png" alt="" class="services__img">
-				<div class="services__tittle">Исправление и доработка
-существующей вёрстки</div>
+				<div class="services__tittle">Исправление и доработка <br>существующей вёрстки</div>
 			</li>
 		</ul>
 		<button class="more__btn">
@@ -58,7 +54,73 @@
 		</button>	
 	</div>
 
+	<section class="work__exempl">
+		<h2 class="headline">
+			Что я делаю
+		</h2>
+		<ul class="work__exempl__list">
+			<li>
+				<a href="#">					
+					<img src="./img/portfolio-1.png" alt="" class="work__exempl__img">
+					<div class="work__exempl__tittle">сайт психолога Веры Антоновой</div>
+				</a>
+			</li>
+			<li>
+				<a href="#">
+					<img src="./img/portfolio-2.png" alt="" class="work__exempl__img">
+					<div class="work__exempl__tittle">Сайт детской одежды</div>
+				</a>
+			</li>
+			<li>
+				<a href="#">
+					<img src="./img/portfolio-3.png" alt="" class="work__exempl__img">
+					<div class="work__exempl__tittle">Сайт магазина рыболов</div>
+				</a>
+				
+			</li>
+		</ul>
+		<button class="more__btn">
+			Заказать проект			
+		</button>
+	</section>
 
+	<div class="banner">
+		<h2>Адаптивная вёрстка под все устройства <br> и браузеры от 1000 рублей всего за 4 часа.*</h2>
+		<p>* Срок и стоимость могут отличаться от заявленных и рассчитываются  индивидуально, <br>в зависимости от сложности задач.</p>
+	</div>
+
+	<footer>
+		<div class="footer__top">
+			<div class="footer__menu">
+				<a href="#" class="menu__link">Услуги</a>
+				<a href="#" class="menu__link">Портфолио</a>
+			   <a href="#" class="menu__link">Стоимость</a>
+			</div>
+
+			<div class="footer__TelPlusLink">
+				<div class="tel">
+					+7 (499) 995-77-55
+				</div>
+				<div class="mail">
+					dmitry@alekseev.com
+				</div>
+			</div>
+			<div class="foooter__social">
+				<button class="order-call">
+					
+				</button>
+				<ul class="social__list">
+					<li><a href="#"><img src="" alt=""></a></li>
+					<li><a href="#"><img src="" alt=""></a></li>
+					<li><a href="#"><img src="" alt=""></a></li>
+					<li><a href="#"><img src="" alt=""></a></li>
+				</ul>
+			</div>
+		</div>
+		<div class="footer__bottom">
+			
+		</div>
+	</footer>
 
 
 </body>
