--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+	<div class="form__layout ">
+		<form action="	" class="order__form">
+			<a href="#" class="close__button"></a>
+			<h3>Please teke you order: </h3>
+
+			<label  >		
+				Name:
+				<input maxlength="22" type="text" name="name">
+			</label>
+			<label  >
+				tel:
+				<input maxlength="22" type="text" name="phone">
+			</label>
+			<label  >
+				E-mail:
+				<input  type="email" name="email">
+			</label>
+			<div class="button__container">
+				<button class="orrange__button">	Send </button>
+			</div>
+		</form>
+	</div>
 	<header>
 		<div class="fixed-container first-section">
 			<div class="menu-container">
@@ -17,7 +39,7 @@
 				</nav>
 				<div class="phone-container">
 					<span class="phone">+7 495 555-55-55</span>
-					<button class="order-call">Заказать звонок</button>
+					<button class="order-call show__order__form">Заказать звонок</button>
 				</div> 
 			</div>
 			<div class="title-container">
@@ -122,6 +144,8 @@
 		</div>
 	</footer>
 
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
+	<script src="close.js"></script>
 </body>
 </html>
